<resources>
    <string name="app_name">PurohitDarponPremium</string>
    <string name="advanced_login">Login With Mail &amp; Password </string>
    <string name="signup">Signup</string>
    <string name="or">Or</string>
    <string name="forget_password">Forget password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Back to login page!!</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="confirm_password">Confirm password</string>
    <string name="birthday">Birthday</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="contact_me">Contact Me</string>
    <string name="rate_me">Rate Me</string>
    <string name="privaycy_policy">Privacy Policy</string>
    <string name="log_out">Logout</string>
    <string name="MTitle">আপনি কি এ্যাপ থেকে বেড় হবেন?</string>
    <string name="policy">

Purohit Darpon Premium App Privacy Policy\n\n

Effective Date: [12/8/2023]\n\n

Thank you for using Purohit Darpon Premium app developed by Adhikari IT. This Privacy Policy outlines how we collect, use, disclose, and protect your information when you use our App. By using the App, you agree to the terms and conditions of this Privacy Policy.\n\n

Information We Collect\n\n

Personal Information:\n The App may collect personal information you provide voluntarily, such as your name, contact details, and payment information when you subscribe to our premium services.\n\n

Device Information:\n We may collect information about your device, including but not limited to device type, operating system, and unique device identifiers. This information helps us improve the Apps functionality and performance.\n\n

Usage Information:\n We collect information about how you use the App, including the features you access, interactions, and usage patterns. This data is used to enhance the user experience and tailor our services to your preferences.\n\n

How We Use Your Information\n

Service Provisioning:\n We use your personal information to provide the premium services you have subscribed to and to maintain your account.\n\n

Communication:\n We may use your contact information to send you important updates, announcements, and promotional materials related to the App. You can opt-out of these communications at any time.\n\n

Analytics:\n We use the collected data for analytical purposes to understand user behavior, preferences, and trends. This helps us improve the Apps features, functionality, and user experience.\n\n

Disclosure of Your Information\n

We may share your information in the following circumstances:\n

Third-Party Service Providers:\n We may engage third-party service providers to assist us in providing and improving our services. These providers are bound by confidentiality obligations and are only allowed to use your information for specified purposes.\n\n

Legal Compliance: We may disclose your information if required by law, regulation, or legal process.\n\n

Business Transfers:\n In the event of a merger, acquisition, or sale of all or a portion of our assets, your information may be transferred as part of the transaction.\n\n

Data Security\n

We implement reasonable security measures to protect your information from unauthorized access, alteration, disclosure, or destruction. However, no method of transmission over the internet or electronic storage is completely secure, and we cannot guarantee absolute security.\n\n

Your Choices\n

You can update or delete your account information by contacting us at [pk177sf@gmail.com]. You can also unsubscribe from promotional communications by following the instructions provided in the communication.\n\n

Childrens Privacy\n

The App is not intended for use by individuals under the age of [13/16/18], and we do not knowingly collect personal information from children without parental consent. If you believe we have collected information from a child without consent, please contact us at [pk177sf@gmail.com] to have it removed.\n\n

Changes to Privacy Policy\n

We reserve the right to modify this Privacy Policy at any time. Updates will be posted within the App, and your continued use of the App after changes are made signifies your acceptance of the revised Privacy Policy.\n\n

Contact Us\n

If you have any questions, concerns, or requests regarding this Privacy Policy or your personal information, please contact us at [pk177sf@gmail.com].\n\n

Adhikari IT\n
Dhaka Bangladesh.\n
Phone-01730180285\n
pk177sf@gmail.com\n

    </string>
    <string name="enter_your_name">Your name</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="send">Send</string>
    <string name="cleare">Cleare</string>

</resources>
