<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:src="@drawable/lock_24"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advanced_login"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/teal_700"
        android:layout_below="@+id/login_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>


    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/login_title"
        android:layout_marginTop="40dp"
        android:padding="16dp"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/login_email"
        android:layout_marginTop="20dp"
        android:padding="16dp"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:background="@drawable/button_shape"
        android:layout_below="@+id/login_password"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@color/teal_700"
        android:textSize="17sp"
        android:layout_below="@+id/login_button"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="17sp"
        android:textColor="@color/red"
        android:layout_centerInParent="true"
        android:layout_below="@+id/forgetPassword" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgetPassword"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif"
        android:text="@string/signup"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"/>
    </RelativeLayout>

</ScrollView>

