<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotePasswordActivity">

    <ImageView
        android:id="@+id/forgot_password_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/lock_24"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/forgot_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/teal_700"
        android:layout_below="@+id/forgot_password_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/forgot_password_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/forgot_password_title"
        android:layout_marginTop="40dp"
        android:padding="16dp"/>

    <Button
        android:id="@+id/forgot_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textColor="@android:color/white"
        android:background="@drawable/button_shape"
        android:layout_below="@+id/forgot_password_email"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/back_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_login"
        android:textColor="@color/teal_700"
        android:textSize="13sp"
        android:layout_below="@+id/forgot_password_button"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>