<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#03A9F4"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".ContactMe">

    <LinearLayout
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <EditText
            android:id="@+id/nameEditeText"
            android:textStyle="bold"
            android:textSize="17sp"
            android:hint="@string/enter_your_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20sp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_weight="1.5"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <EditText
            android:id="@+id/messageEditeTextId"
            android:textStyle="bold"
            android:textSize="17sp"
            android:hint="@string/enter_your_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center">

        <Button
            android:id="@+id/sendBtnId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFC107"
            android:layout_marginEnd="20dp"
            android:textSize="17sp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:text="@string/send" />

        <Button
            android:id="@+id/clearBtnId"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cleare"
            android:background="#FFC107"/>

    </LinearLayout>

</LinearLayout>